[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_blastn"
version = "0.2.1"
description = "Library for using blastn."
readme = "README.rst"
authors = [
    { name = "Johannes Programming", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['blastn']
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"